infrastructure/1password/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: onepassword
  name: onepassword-connect-health
spec:
  routes:

  - match: Host(`onepassword.cluster.example.net`) && PathPrefix(`/health`)
    kind: Rule
    services:
    - name: onepassword-connect
      kind: Service
      port: 8080
    # middlewares:
    #   - name: auth
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: auth
# spec:
#   basicAuth:
#     secret: secretName # Kubernetes secret named "secretName"
